fix header issues on small screens

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -30,7 +30,10 @@
   }
   &__title {
     @extend .ons-u-fs-r--b;
-    @extend .ons-u-fs-xl\@xxs;
+
+    @include mq(405px) {
+      font-size: 1.4rem !important;
+    }
 
     color: var(--ons-color-white);
 
