--- a/src/components/label/_label.scss
+++ b/src/components/label/_label.scss
@@ -17,7 +17,7 @@
   }
 
   &--placeholder {
-    font-size: 1rem;
+    font-size: 0.95rem;
     font-weight: $font-weight-regular;
     left: 10px;
     position: absolute;
